fixed stretched images

--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
 * {
-box-sizing: border-box;
+  box-sizing: border-box;
 }
 
 body {
@@ -9,74 +9,82 @@ body {
 
 .container {
   margin: 0 auto;
-  padding: 0 auto;
   width: 100%;
 }
 
-header {
+h1 {
+  font-family: sans-serif;
+  font-size: 1.4em;
+  letter-spacing: .2em;
+  text-align: center;
+  text-transform: uppercase;
+
   padding: 2rem;
 }
 
+h2 {
+  float: left;
+  font-size: 1.4rem;
+  position: absolute;
+  text-align: left;
+
+  padding: 2rem 0rem 0rem 1.5rem;
+}
 
 .preview {
-  float: left;
-  width: 25%;
-}
-
-.inner-wrapper {
+  background-position: center;
+  background-size: cover;
   height: 250px;
-  margin: 1%;
+  margin-top: 1rem;
+  width: 100%;
 }
 
-img {
-  height: 100%;
-
+.baku {
+  background-image: url("../images/baku.jpg");
 }
 
-/* Edit text/style for "Modern Luxury Travel" here */
-h1 {
-  font-size: 1.8em;
-  text-transform: uppercase;
-  text-align: center;
+.london {
+  background-image: url("../images/london.png");
 }
 
-/* Edit text/styling for cities here */
-h2 {
-  font-size: 2em;
-  text-align: left;
-  float: left;
-  position: absolute;
+.madrid {
+  background-image: url("../images/madrid.jpg");
 }
 
+.rome {
+  background-image: url("../images/rome.jpg");
+}
 
-/* Media Queries */
-
-/* Mobile */
 @media screen and (min-width: 375px) {
   .preview {
-    float: left;
     width: 100%;
-  }
-  img {
-    width: 100%;
-  
   }
 }
 
-/* Tablet */
 @media screen and (min-width: 575px) {
+  .container {
+    width: 85%;
+  }
+  
   .preview {
     float: left;
-    width: 50%;
+    height: 200px;
+
+    margin: 1%;
+    width: 48%;
   }
-
-
 }
 
-/* Desktop */
-@media screen and (min-width: 1199px) {
+@media screen and (min-width: 991px) {
+  .container {
+    width: 70%;
+  }
+
   .preview {
     float: left;
-    width: 25%;
+    height: 200px;
+
+    margin: 1%;
+    width: 23%;
   }
 }
